fix some styles which were broken on smaller devices

--- a/src/components/App.scss
+++ b/src/components/App.scss
@@ -46,7 +46,7 @@
 #root {
   display: flex;
   flex-direction: column;
-  height: 100vh;
+  min-height: 100vh;
 }
 //loading gif styling
 .loadingGif {
