--- a/src/components/CountryDetails/CountryDetails.module.scss
+++ b/src/components/CountryDetails/CountryDetails.module.scss
@@ -72,7 +72,7 @@
 
     width: 100%;
     max-width: 500px;
-    height: auto;
+    height: 100%;
   }
   @media screen and(min-width:1200px) {
     align-items: center;
