--- a/src/components/Dashboard/Dashboard.module.scss
+++ b/src/components/Dashboard/Dashboard.module.scss
@@ -1,6 +1,9 @@
 @import "../../assets/styles/libs/vars";
 @import "../../assets/styles/base/base";
 .dashboard {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
   font-size: $homePageItems;
   color: $white;
   a {
